# ITMO

./: .hgignore  BrutalDepTypes.lagda  CMakeLists.txt  Euler.hs  Makefile  Primitive.hs  README  README.md  clean.bat  euler.hs  main.cpp  make.bat  readme  rybak.andrey.sln  talk.odt  unknown-destination-messages.txt
09-polyline_simplification_no_topology_preservation/: picture.mp  simplifyingpolyline.tex  statement.tex
Agda/: PrimitiveAgda12Part1.agda
DCSTLC/: ST.agda
ITMOPrelude/: Algebra.hs  Categories.hs  IO.hs  List.hs  Primitive.hs  Tree.hs
ITMOPrelude/Categories/: FromMonad.hs  FromMonadFish.hs  FromMonadJoin.hs  ToMonad.hs  ToMonadFish.hs  ToMonadJoin.hs
Monstupar/: Core.hs  Derived.hs  Tests.hs
Pivotal/: HeapTries.agda  HeapTries.lagda  MyPivotal.agda  TreeComplete.agda
UnTyLambda/: Interpreter.hs  REPL.hs
assembly/: README.md
assembly/lesson1/: hello.asm  itoa.asm
assembly/lesson3/: args.asm  cout.asm
assembly/lesson6/: main.asm
bachelor-thesis/: .hgignore  BrutalDepTypes.lagda  README.md  Test.agda
bachelor-thesis/DCSTLC/: ST.agda
bachelor-thesis/Pivotal/: Report.agda
bachelor-thesis/docs/: annotation.docx  reviewer-application.rtf  reviewer.docx  reviewer.odt  specification.docx  supervisor.rtf  title-page.rtf  topic-application.rtf
bachelor-thesis/presentation-src/: p.sh  presentation.tex
bachelor-thesis/thesis-src/: README.md  m.sh  r.sh  thesis.bib  thesis.tex
bash/: README.md  find.sh  wgetqueue.sh
bentley-ottmann/: slides.tex
bigproject/: main.asm
cg2011/p1.1/: CMakeLists.txt  adaptive.cpp  adaptive.h  check  geometry.cpp  geometry.h  input.txt  interval.cpp  (+4 more)
cg2011/p1.1/golden_segment_intersection/: CMakeLists.txt  check.cpp
cg2012.1/: build.sh  generate.py  tasks.tex
cg2012.1/09-polyline_simplification_no_topology_preservation/testgen/: 1.out  2.in  CMakeLists.txt  correctness_generator.cpp  perfomance_generator.cpp
cg2012.1/10-minimum_circumscribed_circle/testgen/: 1.in  CMakeLists.txt  correctness_generator.cpp
chat/: Makefile  announce_message.cpp  announce_message.h  announcer.cpp  announcer.h  chat.cpp  chat.h  chat_message.cpp  chat_message.h  chatter.cpp  chatter.h  kbhit.cpp  listener.cpp  listener.h  little_receiver.cpp  ma.cpp  ma.h  message.cpp  message.h  ports.h  receiver.cpp  receiver.h  sender.cpp  sender.h  sl.cpp  tcp_socket.cpp  tcp_socket.h  test.cpp  user.cpp  user.h
common/: common.cpp  common.h  common.mk
compilers/: README.md
computational-geometry/: README.md
cpp/: README.md
docs/: annotation.docx  annotation.rtf  pastes.txt  reviewer-application.rtf  reviewer.docx  reviewer.rtf  specification.docx  specification.rtf  title-page.rtf  topic-application.rtf
epollfd/: Makefile  autofd.cpp  autofd.h  epollfd.cpp  epollfd.h
example/: slides.tex
example2/: analysis-slides.tex
fs/: Makefile  commands.h  main.cpp  ports.h
functional-programming/: README.md
hw/: cout.asm
imfiletrans/: Makefile  a.out  big_buffer.h  client.cpp  client.h  http.cpp  http.h  receiver.cpp  sender  sender.cpp  server.cpp
lesson1/: itoa.asm  itoanodiv.asm  itoanodivfor.asm
lesson3/: argv-shit.asm  argv.asm  localvar.asm
lesson4/: float.asm
lorenz/: Euler.hs  Makefile  all.sh  common.gp  main.hs  oneA.gp  oneE.gp  oneEE.gp  oneIE.gp  oneRK.gp
machine-learning/: README.md
minissh/: minissh.cpp
myalloc/: big_malloc.cpp  big_malloc.h  medium_malloc.cpp  medium_malloc.h  myalloc.c  myalloc.cpp  small_malloc.cpp  small_malloc.h
nchat/: Makefile  announce_message.cpp  announce_message.h  announcer.cpp  chat.cpp  chat.h  chat_message.cpp  chat_message.h  kbhit.cpp  kbhit.h  listener.cpp  little_receiver.cpp  little_receiver.h  ma.cpp  ma.h  n.cpp  ports.h  ra.cpp  ra.h  receiver.cpp  sender.cpp  sender.h  sl.cpp  sl.h  tcp_socket.cpp  tcp_socket.h  user.cpp  user.h
networks/: README.md
numerical-methods/: README.md
offtp/: Makefile  offtp.cpp
parsing/: README.md
prac1/: itoa.asm  itoanodiv.asm  itoanodivfor.asm  print5.asm
prac2/: loop-examples.asm
presentation-src/: p.sh  presentation.tex
problem1.1/: last-message.txt  problem1.1.cpp
problem1.2/: last-message.txt  problem1.2.cpp  problem1.2.vcxproj
problem1.3/: last-message.txt  problem1.3.cpp  problem1.3.vcxproj
problem1.4/: big_int.cpp  big_int.h  compilation-warnings.txt  last-message.txt  problem1.4.cpp
problem2.1/: big_int.cpp  big_int.h  big_int_test.cpp  compilation-errors.txt  compilation-warnings.txt  digits_container.cpp  digits_container.h  failed-test.txt  last-message.txt  problem2.1.cpp  problem2.1.vcxproj
problem3.1/: big_int.cpp  big_int.h  calculator.h  failed-test.txt  helper.cpp  helper.hpp  in.txt  last-message.txt  problem3.1.cpp  problem3.1.vcxproj  user_functions.cpp
problem4.1/: add.h  arithmetic.h  big_int.h  divide.h  last-message.txt  multiply.h  normalize.h  out.txt  problem4.1.cpp  problem4.1.vcxproj  sum.h
problem4.2/: compilation-errors.txt  last-message.txt  list.h  problem4.2.cpp  problem4.2.vcxproj  sort.h  struct_if.h  vector.h
problem_1/: problem_1.cpp  problem_1.vcproj
problem_2/: problem_2.vcproj
problem_3/: problem_3.cpp  problem_3.vcproj
rybak.andrey/: .gitignore
sigd/: http.h  sigd.cpp
src/: .GRM.g4.un~  .GRMLexer.g4.un~  .GRMParser.g4.un~  .Grammar.g4.un~  Core.java  GRM.g4  GRM.tokens  GRMBaseListener.java  GRMLexer.java  GRMListener.java  GRMParser.java  LexerGenerator.java  LexerRule.java  Main.java  ParseItem.java  ParserGenerator.java  ParserRule.java
system-programming/: .hgignore  README.md
task1/: Euler.hs  Makefile
template/: picture.mp  template.tex
test/: ExpectedException.java  Lexer.java  Main.java  Parser.java  TestLexer.java  TestParser.java  test.grm
thesis/: Agda1.lagda  AgdaDescription.lagda  VecSample.lagda  lagda.txt  plagda.txt  presentation.tex  r.sh  slides.tex  thesis.bib  thesis.tex
thesis-src/: lagda.txt  m.sh  p.sh  presentation.tex  r.sh  thesis.bib  thesis.tex
udp/: Makefile  common.cpp  common.h  message.h  receiver.cpp  sender.cpp
unsed/: Makefile  readlines-main  readlines-main.c  readlines.c  readlines.h
(+1360 files in other folders)
